fix: material 3 fixes, UI fixes

--- a/assets/assets/files/configuration/theme_configuration_0.json
+++ b/assets/assets/files/configuration/theme_configuration_0.json
@@ -11,8 +11,8 @@
                {
                   "id":1,
                   "subtitle":false,
-                  "title":"Primary Swatch",
-                  "key":"key_primary_swatch_color",
+                  "title":"Seed Color",
+                  "key":"color_scheme_seed",
                   "value_type":"string",
                   "input":"color",
                   "dark":{
